force-app/main/default/objects/Activity/fields/Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Task_Outcome__c</fullName>
    <label>Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful Call</fullName>
            </value>
            <value>
                <fullName>Left VM</fullName>
            </value>
            <value>
                <fullName>No Msg - I Will Call Back</fullName>
            </value>
            <value>
                <fullName>Call Back Requested</fullName>
            </value>
            <value>
                <fullName>Bad Phone Number</fullName>
            </value>
            <value>
                <fullName>VM Full - No Msg</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Email Bounce</fullName>
            </value>
            <value>
                <fullName>Successful Meeting</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Showing/Tour [Real Estate]</fullName>
            </value>
            <value>
                <fullName>Returning w/ Spouse</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Activity.Task Outcome</fullName>
            </value>
            <value>
                <fullName>LinkedIn Msg Sent</fullName>
            </value>
            <value>
                <fullName>LinkedIn Msg Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>